Fixed broken landing page in dark mode. (#30)

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -11,7 +11,7 @@ kbd {
     border-radius: 3px;
     border: 1px solid #b4b4b4;
     box-shadow: 0 1px 1px rgba(0,0,0,0.2), 0 2px 0 0 rgba(255,255,255,0.7) inset;
-    color: #333;    
+    color: #333;
     font-size: 0.85em;
     font-weight: 700;
     line-height: 1;
@@ -19,4 +19,13 @@ kbd {
     margin-left: 4px;
     margin-right: 4px;
     white-space: nowrap;
+}
+
+trap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white
 }
